# daily-lottery-solana-contracts

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
programs/daily_lottery/: Cargo.toml
programs/daily_lottery/src/: error.rs  events.rs  lib.rs  tests.rs
programs/daily_lottery/src/instructions/: attest_uploaded.rs  begin_buy_phase.rs  begin_reveal_phase.rs  begin_settlement_phase.rs  begin_upload_phase.rs  buy_tickets.rs  create_lottery.rs  finalize_no_attesters.rs  finalize_winners.rs  initialize.rs  mod.rs  settle_payout_batch.rs  update_service_charge.rs  update_windows.rs  upload_reveals.rs
programs/daily_lottery/src/state/: config.rs  lottery.rs  mod.rs  participant.rs  vault.rs  vote_tally.rs  winners_ledger.rs
programs/daily_lottery/src/utils/: account.rs  crypto.rs  limits.rs  mod.rs  pda.rs  validation.rs
programs/daily_lottery/tests/: admin_and_errors.rs  flow.rs  full_flow.rs  initialize.rs  settlement.rs
programs/daily_lottery/tests/common/: mod.rs
tests/: daily-lottery.lifecycle.test.js  daily-lottery.test.js
