[package]
name = "daily_lottery"
version = "0.1.0"
edition = "2021"
description = "Daily Lottery program (pure Solana program without Anchor)"

[lib]
crate-type = ["cdylib", "lib"]
name = "daily_lottery"

[features]
no-entrypoint = []
default = []

[dependencies]
solana-program = "4.0.0"
solana-system-interface = { version = "3", features = ["bincode"] }
solana-sha256-hasher = "3"
borsh = { version = "1", features = ["derive"] }
thiserror = "2.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[dev-dependencies]
litesvm = { version = "0.10.0", features = ["precompiles"] }
solana-account = "3"
solana-clock = "3"
solana-ed25519-program = "3"
solana-instruction = "3"
solana-keypair = "3.1.2"
solana-signer = "3"
solana-transaction = "3"
solana-transaction-error = "3"
